# agent-circus

./: .gitignore  .pre-commit-config.yaml  .secrets.yaml  .sops.yaml  AGENTS.md  LICENSE  README.md  flake.nix  mise.toml  package-lock.json  pyproject.toml
.agent-circus/: Dockerfile  compose.yaml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  docker-entrypoint.sh  init-firewall.sh  postAttachCommand.sh
src/agent_circus/: __init__.py  agent_config.py  cli.py  compose.py  config.py  context.py  devcontainer.py  docker_client.py  exceptions.py  mcp.py  state.py  utils.py
src/agent_circus/commands/: __init__.py  build.py  exec_.py  init.py  ps.py  remove.py  up.py
src/agent_circus/templates/: __init__.py  envrc  flake.nix
src/agent_circus/templates/agent-circus/: Dockerfile  compose.yaml  devcontainer.json  init-firewall.sh  pyproject.toml
src/agent_circus/templates/agent-circus/hooks/: base-root.sh  base-user.sh
src/remove_containers/: __init__.py  cli.py  container_manager.py  docker_client.py  exceptions.py  utils.py
tests/: test_additional_dirs.py  test_agent_config.py  test_command_validation_errors.py  test_compose.py  test_config.py  test_context.py  test_exec_auto_up.py  test_mcp.py  test_state.py  test_templates.py
