[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "acp-reference"
version = "0.1.0"
description = "ACP Reference Configurations and Utilities"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mistral-vibe>=2.0.2",
    "docker>=7.0.0",
]

[project.scripts]
remove-containers = "remove_containers.cli:run_cli"

[tool.hatch.build.targets.wheel]
packages = ["src/remove_containers"]

[dependency-groups]
dev = [
    "hatchling>=1.28.0",
    "ruff>=0.14.14",
    "ty>=0.0.14",
]
